--- a/CSS/gallery.css
+++ b/CSS/gallery.css
@@ -8,6 +8,15 @@
   gap: 20px;
 }
 
+h1 {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 10vw;
+  font-weight: normal;
+  text-align: center;
+  color: tomato;
+}
+
 img {
   width: 100%;
   object-fit: fill;
@@ -18,6 +27,9 @@ img {
   .grid-container {
     grid-template-columns: 266px 266px;
     grid-template-rows: repeat(4, 200px);
+  }
+  h1 {
+    font-size: 8vw;
   }
 }
 
